--- a/index.html
+++ b/index.html
@@ -83,6 +83,16 @@
 							Web Development
 						</a>
 					</li>
+					<li class="menu-nested_item">
+						<a href="#" class="menu-nested_link">
+							Frontend
+						</a>
+					</li>
+					<li class="menu-nested_item">
+						<a href="#" class="menu-nested_link">
+						Backend
+						</a>
+					</li>
 				</ul>
 			</li>
 			<li class="menu-item">
